--- a/src/homestyle.css
+++ b/src/homestyle.css
@@ -49,6 +49,8 @@ li a:hover {
     display: flex;
     border-radius: 50%;
     margin-top: 5vh;
+    border-color: white;
+    border-style: groove;
     
 }
 
@@ -60,6 +62,9 @@ li a:hover {
     justify-content: center;
     background-color: #CACAAA;
     margin-bottom: -70vh;
+    border-color: white;
+    border-style: groove;
+    padding: 1rem;
 }
 
 .container3 {
@@ -68,10 +73,12 @@ li a:hover {
     justify-content: center;
     margin: 10vw;
     top: -1vh;
-    background-color: white;
+    background-color: grey;
+    border-color: white;
+    border-style: groove;
     margin-bottom: -1vh;
     font-family: vernda, sans-serif;
-    padding: 0.5em; 
+    padding: 1rem; 
     
 }
 
@@ -103,7 +110,7 @@ div2 {
 }
 
 .icons:hover {
-    transform: translateY(100px);
+    transform: translateY(-25px);
     
        
 }
