--- a/src/exp.css
+++ b/src/exp.css
@@ -1,8 +1,9 @@
 *{
     box-sizing: border-box;
-    margin:0;
+    margin: 0;
     padding:0;
 }
+
 
 ul {
     overflow: hidden;
@@ -38,21 +39,7 @@ li a:hover {
     width: 100%;
 }
 
-.heading h1 {
-    position: absolute; 
-    background-color: grey;
-    margin-top: 1.2em;
-    font-size: 1em;
-    font-family:vernda, sans-serif;
-    font-weight: 100;
-    color: black;
-    padding: 1.2rem;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -0);
-    border-style: groove;
- }
-    
+
  div2 {
     display:flex;
     flex-direction: column;
@@ -63,12 +50,10 @@ li a:hover {
  .subheading {
     padding: 1.2rem;
     background-color:#C8AB83; 
-    margin: 2rem;
-    margin-top: 6rem; 
+    margin: 1rem 2rem -0.2rem 2rem;
     text-align: center; 
     padding: 0.5em;
     color: black;
-    margin-bottom: -0.2rem;
     font-weight: 100;
     border-color: white;
     border-style: groove;
@@ -77,16 +62,23 @@ li a:hover {
  .para1 {
     background-color: #7F636E;
     padding: 2rem;
-    margin: 1rem;
+    margin: 1rem 1rem 0.5rem 1rem;
     border-color: white;
     border-style: groove;
  }
 
-#d1, #d2, #d3, #d4 {
+ #lastpara {
+    background-color: #7F636E;
+    padding: 2rem;
+    margin: 1rem 1rem 2rem 1rem;
+    border-color: white;
+    border-style: groove;
+ }
+
+#d1 {
     max-width:50vw;
     max-height:50vh;
-    margin-left: 25vw; 
-    margin-bottom: 0.2rem;
+    margin: 1em 0 0.2rem 25vw;
     border-color: white;
     border-style: groove;
 }
