--- a/src/exp.css
+++ b/src/exp.css
@@ -77,7 +77,7 @@ li a:hover {
 
 #d1 {
     max-width:50vw;
-    max-height:50vh;
+    max-height:50W;
     margin: 1em 0 0.2rem 25vw;
     border-color: white;
     border-style: groove;
@@ -85,11 +85,10 @@ li a:hover {
 
  .footer {
     background-color: white;
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
     text-align: center;
-    
+    display:flex;
+    align-items: flex-end;
+    justify-content: center;
 }
 
