--- a/src/homestyle.css
+++ b/src/homestyle.css
@@ -10,6 +10,7 @@ ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
+    background-color: white;
 }
 
 li {
@@ -31,86 +32,81 @@ li a:hover {
     background-color: grey;
 }
 
-
-.container1 {
-  
-    background: linear-gradient(to top, #7F636E 0%, #7F636E 80%, #CACAAA 80%, #CACAAA 100%);  
-    width: 100vw;
-    height: 100vh; 
+.backgr {
+    width: 100%;
+    height: 100%; 
     display: flex;
     justify-content:center;
     background-size: 100% 100%;
+    flex-direction: column;
+    align-items: center;
     
 }
- 
+
+
+body  {
+    overflow-x: hidden;
+    height: 100%;
+    background: linear-gradient(to top, #7F636E 0%, #7F636E 78%, #CACAAA 78%, #CACAAA 100%);  
+   
+}
+
 
 #pfp {
-    max-width: 25rem;
-    max-height: 25vh;
+
+    width: 50vw;
+    height: 50vw;
     display: flex;
+    display: center;
     border-radius: 50%;
-    margin-top: 5vh;
+    margin-top: 2rem;
     border-color: white;
     border-style: groove;
     
+}
+
+.container1 {
+
+     display: flex;
+     margin: 1rem 1rem 1rem 1rem;
+     justify-content: center;
+     background-color: #CACAAA;
+     border-color: white;
+     border-style: groove;
+     padding: 1rem;
+     width: 80vw
+     
+      
+
 }
 
 .container2 {
-    display: flex;
-    position: absolute; 
-    margin: 4rem 1rem 4rem 1rem;
-    top: 30vh;
-    justify-content: center;
-    background-color: #CACAAA;
-    border-color: white;
-    border-style: groove;
-    padding: 1rem;
-    
 
-}
-
-.container3 {
     display: flex;
-    position: absolute; 
-    justify-content: center;
-    margin: 6rem 1rem 4rem 1rem;
-    top: 50vh;
+    margin: 0.1rem 1rem 1rem 1rem;
     background-color: grey;
     border-color: white;
     border-style: groove;
     font-family: vernda, sans-serif;
     padding: 1rem; 
-    min-height: 20vh
+    width: 80vw;
     
 }
  
-.footer {
+.footer1 {
     background-color: white;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    
-    
+    text-align: center; 
+    display: flex;
+    justify-content: center;
+      
 }
 
 
 div2 {
-    /* display: flex;  */
-    justify-content: center;
     filter: invert(100%);
-    margin: 1rem 0 1rem 0;
-    position: absolute;
-    top: 90vh; 
-    left: 50%;
-    transform: translate(-50%, 0);
-    
-  
+    margin: 1rem 0 2rem 0;   
 }  
     
-    
- 
 .icons {
     transition-duration: 0.5s;
     display: flex;
@@ -121,3 +117,4 @@ div2 {
     
        
 }
+
