--- a/src/blog1.css
+++ b/src/blog1.css
@@ -3,3 +3,96 @@
     margin:0;
     padding:0; 
 }
+
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+
+ul {
+    overflow: hidden;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    padding: 1rem;
+    color: black;
+    text-decoration: none; 
+    text-align: center;
+    font-size: 0.7em;
+    font-family: verdana, sans-serif; 
+    
+
+}
+
+li a:hover {
+    background-color: grey;
+}
+
+
+#container1 {
+    display: flex;
+    background-color: #CACAAA; 
+    height: 100%;
+    width: 100%;     
+}
+
+
+    
+ div2 {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    
+ }
+
+ .heading {
+    padding: 1.2rem;
+    background-color:#C8AB83; 
+    text-align: center; 
+    padding: 0.5em;
+    color: black; 
+    font-weight: 100;
+    border-color: white;
+    border-style: groove;
+    margin: 2rem 2rem 1rem 2rem; 
+ } 
+
+ .para1 {
+    background-color: #7F636E;
+    padding: 2rem;
+    margin: 1rem;
+    border-color: white;
+    border-style: groove;
+    height: 30rem; 
+ }
+
+#d1 {
+    max-width:50vw;
+    max-height:50vW;
+    margin-left: 25vw; 
+    margin-bottom: 0.2rem;
+    border-color: white;
+    border-style: groove;
+}
+
+
+
+.footer {
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    display:flex;
+    align-items: flex-end;
+    justify-content: center;
+    
+}
+
