--- a/src/exp.css
+++ b/src/exp.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 
-
+/* Navigation Bar */
 ul {
     overflow: hidden;
     list-style-type: none;
@@ -32,6 +32,7 @@ li a:hover {
     background-color: grey;
 }
 
+/* Background of main body */
 .container1 {
     display: flex;
     background-color: #CACAAA;
@@ -39,8 +40,8 @@ li a:hover {
     width: 100%;
 }
 
-
- div2 {
+/* Main body */
+ article {
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +67,7 @@ li a:hover {
     border-color: white;
     border-style: groove;
  }
-
+/* wanted different margins on last paragraph so set up id */
  #lastpara {
     background-color: #7F636E;
     padding: 2rem;
@@ -75,6 +76,7 @@ li a:hover {
     border-style: groove;
  }
 
+ /* picture */
 #d1 {
     max-width:50vw;
     max-height:50W;
@@ -82,7 +84,7 @@ li a:hover {
     border-color: white;
     border-style: groove;
 }
-
+/* footer */
  .footer {
     background-color: white;
     width: 100%;
@@ -92,3 +94,4 @@ li a:hover {
     justify-content: center;
 }
 
+/* responsiveness */
