--- a/src/homestyle.css
+++ b/src/homestyle.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-
+/* Navigation bar */
 ul {
     overflow: hidden;
     list-style-type: none;
@@ -32,6 +32,7 @@ li a:hover {
     background-color: grey;
 }
 
+/* Main section and background */
 .backgr {
     width: 100%;
     height: 100%; 
@@ -52,10 +53,11 @@ body  {
 }
 
 
-#pfp {
+/* photo */
 
+#pfp {
     width: 50vw;
-    height: 50vw;
+    height: 55vw;
     display: flex;
     display: center;
     border-radius: 50%;
@@ -64,6 +66,8 @@ body  {
     border-style: groove;
     
 }
+
+/* Text boxes */
 
 .container1 {
 
@@ -74,10 +78,8 @@ body  {
      border-color: white;
      border-style: groove;
      padding: 1rem;
-     width: 80vw
-     
-      
-
+     width: 80vw;
+     font-family: Garamond, serif; 
 }
 
 .container2 {
@@ -87,21 +89,14 @@ body  {
     background-color: grey;
     border-color: white;
     border-style: groove;
-    font-family: vernda, sans-serif;
+    font-family: Garamond, serif; 
     padding: 1rem; 
     width: 80vw;
     
 }
- 
-.footer1 {
-    background-color: white;
-    text-align: center; 
-    display: flex;
-    justify-content: center;    
-}
 
-
-div2 {
+/* Social media icons */
+figure {
     filter: invert(100%);
     margin: 1rem 0 2rem 0;   
 }  
@@ -116,3 +111,12 @@ div2 {
           
 }
 
+ /*Footer  */
+ 
+ .footer1 {
+    background-color: white;
+    text-align: center; 
+    display: flex;
+    justify-content: center;    
+    font-family: Garamond, serif; 
+}
