--- a/src/bloghome.css
+++ b/src/bloghome.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 
-
+/* Navigation bar */
 ul {
     overflow: hidden;
     list-style-type: none;
@@ -24,14 +24,13 @@ li a {
     text-align: center;
     font-size: 0.7em;
     font-family: verdana, sans-serif; 
-    
-
 }
 
 li a:hover {
     background-color: grey;
 }
 
+/* Background */
 .container1 {
     display: flex;
     background-color: #CACAAA;
@@ -39,7 +38,7 @@ li a:hover {
     width: 100%;
 }
 
-
+/* Main body */
  div2 {
     display:flex;
     flex-direction: column;
@@ -54,9 +53,10 @@ li a:hover {
     text-align: center; 
     padding: 0.5em;
     color: black;
-    font-weight: 100;
+    font-weight: 1;
     border-color: white;
     border-style: groove;
+    font-family: garamond, serif;
  } 
 
  .para1 {
@@ -65,7 +65,10 @@ li a:hover {
     margin: 1rem 1rem 0.5rem 1rem;
     border-color: white;
     border-style: groove;
+    font-family: garamond, serif;
  }
+
+ /* last paragraph has different margins again */
 
  #lastpara {
     background-color: #7F636E;
@@ -73,8 +76,10 @@ li a:hover {
     margin: 1rem 1rem 2rem 1rem;
     border-color: white;
     border-style: groove;
+    font-family: garamond, serif;
  }
 
+ /* Pictures */
 .d1 {
     max-width:50vw;
     max-height:50vh;
@@ -83,7 +88,7 @@ li a:hover {
     border-style: groove;
 }
 
-
+/* Hover on  "Read more" links */
 .readlink:link {
     color:#C8AB83 
 }
@@ -95,15 +100,15 @@ li a:hover {
     color:pink;
 }
 
+/* footer */
  .footer {
     background-color: white;
     width: 100%;
     text-align: center;
     display:flex;
     align-items: flex-end;
-    justify-content: center;
-    
-     
+    justify-content: center;    
+    font-family: garamond, serif;
 }
 
 
