--- a/src/blog1.css
+++ b/src/blog1.css
@@ -155,3 +155,20 @@ li a:hover {
     font-family: garamond, serif;
 }
 
+/* Responsiveness */
+
+/* Tablet */
+
+@media only screen and (min-width:481px) and (max-width:850px) {
+
+
+}
+
+
+/* Desktop */
+
+@media only screen and (min-width:850px) {
+
+}
+
+
