--- a/src/bloghome.css
+++ b/src/bloghome.css
@@ -112,3 +112,20 @@ li a:hover {
 }
 
 
+/* Responsiveness */
+
+/* Tablet */
+
+@media only screen and (min-width:481px) and (max-width:850px) {
+
+
+}
+
+
+/* Desktop */
+
+@media only screen and (min-width:850px) {
+
+}
+
+
