--- a/src/exp.css
+++ b/src/exp.css
@@ -4,12 +4,23 @@
     padding:0;
 }
 
+/* Background */
+body{
+    display: flex;
+    background-color: #CACAAA;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+}
+
 /* Navigation Bar */
 ul {
     overflow: hidden;
     list-style-type: none;
     display: flex;
     justify-content: center;
+    background-color: white;
 }
 
 li {
@@ -41,12 +52,7 @@ li a:hover {
 }
 
 /* Main body */
- article {
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    
- }
+
 
  .subheading {
     padding: 1.2rem;
@@ -110,20 +116,32 @@ li a:hover {
     font-family: garamond, serif;
 }
 
-/* Responsiveness */
+
+/* Responsive Design */
 
 /* Tablet */
 
-@media only screen and (min-width:481px) and (max-width:850px) {
+@media only screen and (min-width:480px) and (max-width:900px) {
 
+    li a {
+        font-size: 1em; 
+    }
 
 }
-
 
 /* Desktop */
 
-@media only screen and (min-width:850px) {
+@media only screen and (min-width:900px) {
+
+ li a {
+        font-size: 1em; 
+    }
+
+
 
 }
+
+
+
 
 
