--- a/src/bloghome.css
+++ b/src/bloghome.css
@@ -46,6 +46,13 @@ li a:hover {
 
 /* Main body */
 
+section {
+    display:flex;
+    flex-direction: column;
+    align-items:center; 
+}
+
+
  .subheading {
     padding: 1.2rem;
     background-color:#C8AB83; 
@@ -83,7 +90,7 @@ li a:hover {
 .d1 {
     max-width:50vw;
     max-height:50vh;
-    margin: 1em 0 0.2rem 25vw;
+    margin: 1em 0 0.2rem 0;
     border-color: white;
     border-style: groove;
 }
