--- a/src/exp.css
+++ b/src/exp.css
@@ -43,16 +43,14 @@ li a:hover {
     background-color: grey;
 }
 
-/* Background of main body */
-.container1 {
-    display: flex;
-    background-color: #CACAAA;
-    height: 100%;
-    width: 100%;
-}
 
 /* Main body */
 
+article {
+    display:flex;
+    flex-direction: column;
+    align-items:center; 
+}
 
  .subheading {
     padding: 1.2rem;
@@ -101,9 +99,10 @@ li a:hover {
 #d1 {
     max-width:50vw;
     max-height:50W;
-    margin: 1em 0 0.2rem 25vw;
+    margin: 1em 0 0.2rem 0;
     border-color: white;
     border-style: groove;
+    justify-content: center;
 }
 /* footer */
  .footer {
