--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,9 @@ main  {
     font-family: Garamond, serif; 
     padding: 1rem; 
     width: 80vw;
+
+    
+    
      
     
 }
@@ -120,7 +123,12 @@ figure {
 
 /* Tablet */
 
-@media only screen and (min-width:480px) and (max-width:900px) {
+@media only screen and (min-width:480px) and (max-width:899px) {
+
+    li a {
+        font-size: 1em; 
+    }
+
 
     figure {
         padding: 5rem 20rem 10rem 20rem; 
