--- a/src/about.css
+++ b/src/about.css
@@ -8,7 +8,8 @@
 
 body {
     display: flex;
-    background-color: #CACAAA;
+    background: rgb(202,195,172);
+    background: radial-gradient(circle, rgba(202,195,172,1) 12%, rgba(202,170,178,1) 100%);
     height: 100%;
     width: 100%;
     flex-direction: column;
