--- a/src/exp.css
+++ b/src/exp.css
@@ -85,14 +85,17 @@ article {
  }
 
  .readlink:link {
-    color:#C8AB83 
+    color:#C8AB83;
+    text-decoration: none; 
 }
 .readlink:visited {
-    color: #55868C  
+    color: #55868C;
+    text-decoration: none;  
 }
  
 .readlink:hover {
     color:pink;
+    text-decoration: none;
 }
 
 
